--- a/client/package.json
+++ b/client/package.json
@@ -4,13 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-  
+    "dev": "vite --port 8088 --host",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.16.4",
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "react": "^18.2.0",
